--- a/7.3/playwright/.gitignore
+++ b/7.3/playwright/.gitignore
@@ -1,4 +1,5 @@
 /node_modules/
+user.js
 
 
 .vscode/*
@@ -6,7 +7,6 @@
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
-!/user.js
 *.code-workspace
 
 # Local History for Visual Studio Code
