--- a/7.5/puppeteer-2/package.json
+++ b/7.5/puppeteer-2/package.json
@@ -10,10 +10,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chai": "^4.3.4",
     "jest": "^27.3.1",
     "jest-puppeteer": "^6.0.0",
-    "puppeteer": "^13.3.2",
-    "chai": "^4.3.4",
-    "cucumber": "^7.0.0-rc.0"
+    "puppeteer": "^13.3.2"
+  },
+  "devDependencies": {
+    "@cucumber/cucumber": "^8.7.0",
+    "cucumber": "^6.0.7",
+    "jest": "^29.2.0"
+  },
+  "directories": {
+    "lib": "lib"
   }
 }
