--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   },
   "scripts": {},
   "dependencies": {
+    "chai": "^4.3.7",
+    "cucumber": "^6.0.7",
     "jest-puppeteer": "^6.2.0",
     "puppeteer": "^19.4.1"
   }
